--- a/bio4j/slides/resources/reveal.js/css/print/pdf.css
+++ b/bio4j/slides/resources/reveal.js/css/print/pdf.css
@@ -68,7 +68,7 @@ h1,h2,h3,h4,h5,h6 {
 a:link,
 a:visited {
 	font-weight: normal;
-	text-decoration: underline;
+	/*text-decoration: underline;*/
 }
 
 .reveal pre code {
@@ -187,4 +187,13 @@ ul, ol, div, p {
 }
 .reveal small a {
 	font-size: 16pt !important;
+}
+
+.reveal.center .slides section:not(.stack) {
+	display: flex !important;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding-top: 2em !important;
+	padding-bottom: 2em !important;
 }
